Update JDK Version (#771)
Signed-off-by: Roland Tyler <roland.tyler@consensys.net>